feat: added an OG image and other og: meta tags

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import OgMetaTags from "../components/OgMetaTags.astro";
+
 interface Props {
   title: string;
 }
@@ -10,8 +12,12 @@ const { title } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Nick Taylor's Social Links" />
     <meta name="viewport" content="width=device-width" />
+    <OgMetaTags
+      title={title}
+      description="Links to my socials and other places you can find me - check out my blog posts, talks, live streams and newsletter."
+      socialImage="/assets/og.png"
+    />
     <link
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🦙</text></svg>"
