--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import { SocialLinks } from "../components/SocialLinks";
 ---
 
-<Layout title="Social Links | Nick Taylor">
+<Layout title="Social Links and other places you can find Nick Taylor online">
   <main class="min-h-screen bg-gray-50 flex items-center justify-center p-4">
     <div class="flex flex-col items-center gap-8">
       <img
