reshuffled the Discord link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,6 +43,13 @@ import { SocialLinks } from "../components/SocialLinks";
               ><span class="sr-only">My newsletter </span>OneTipAWeek.com</a
             >
           </li>
+          <li>
+            <a
+              class="underline hover:text-pink-700 focus-within:text-pink-700"
+              href="https://discord.iamdeveloper.com"
+              ><span class="sr-only">Join my </span>Discord community</a
+            >
+          </li>
         </ul>
       </nav>
     </div>
